Fix build errors with Java 8